Fix components alignment in landing page

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -4,7 +4,7 @@
     font-family: 'quicksand';
     padding:20px;
     display: flex;
-    max-width: 1000px;
+    max-width: 800px;
     align-items: center;
     margin: 0 auto;
     border-bottom: 1px solid #F2F2F2;
