--- a/src/css/viewpost.css
+++ b/src/css/viewpost.css
@@ -4,7 +4,7 @@
 .viewPost{
     font-family: 'quicksand';
     font-size: 15px;
-    max-width: 1000px;
+    max-width: 800px;
     display: flex;
     margin: 0 auto;
     align-items: center;
